Use List.copyOf()